Fix bug 1351821: More text contrast in textarea

--- a/pontoon/base/static/css/translate.css
+++ b/pontoon/base/static/css/translate.css
@@ -1383,6 +1383,7 @@ body > header aside p {
 
 #editor textarea {
   background: #FFFFFF;
+  color: #222222;
   display: block;
   font-size: 13px;
   height: 20%;
